<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="weather"
            type="com.work.weather.ui.WeatherDetailViewModel" />
    </data>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.WeatherDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_sunny1"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:id="@+id/temp_view"
            android:layout_margin="@dimen/horizontal_margin"
            app:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin">
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:layout_alignParentLeft="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/temp_title"/>
                <LinearLayout
                    android:id="@+id/temp_layout"
                    android:layout_below="@+id/temp_title"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/temperature"
                        android:layout_alignParentLeft="true"
                        android:layout_weight=".5"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@{Double.toString(weather.temp)}"
                        android:layout_alignParentLeft="true"
                        android:textSize="15sp"
                        android:layout_weight=".5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/humidity_layout"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/temp_layout"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/humidity"
                        android:layout_alignParentLeft="true"
                        android:textSize="15sp"
                        android:layout_weight=".5"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@{Double.toString(weather.humidity)}"
                        android:layout_alignParentLeft="true"
                        android:textSize="15sp"
                        android:layout_weight=".5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_below="@+id/temp_view"
            android:layout_margin="@dimen/horizontal_margin"
            app:cardCornerRadius="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/horizontal_margin">
                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:layout_alignParentLeft="true"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/wind_title"/>
                <LinearLayout
                    android:id="@+id/ws_layout"
                    android:layout_below="@+id/wind_title"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/speed"
                        android:layout_alignParentLeft="true"
                        android:layout_weight=".5"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@{Double.toString(weather.windSpeed)}"
                        android:layout_alignParentLeft="true"
                        android:textSize="15sp"
                        android:layout_weight=".5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/wd_layout"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ws_layout"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/degree"
                        android:layout_alignParentLeft="true"
                        android:textSize="15sp"
                        android:layout_weight=".5"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@{Integer.toString(weather.windDeg)}"
                        android:layout_alignParentLeft="true"
                        android:textSize="15sp"
                        android:layout_weight=".5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>